--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link href="base.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
 
- 
-
   </head>
   <body>
     <header>
@@ -31,16 +29,13 @@
         <p>I will use this project as a foundation to build more complex websites.</p>
         <p>This exercise helps me understand how HTML works with browsers.</p>
 
-
         <a href="https://www.alxafrica.com/" target="_blank" rel="noopener noreferrer">
-
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="250" />
         </a>
 
         <h2>Our Learners</h2>
 
-        <table border="1">
-
+        <table>
           <thead>
             <tr>
               <th>Name</th>
@@ -79,8 +74,12 @@
     </main>
 
     <footer>
-      <p>Made by Bezawit Abera - <a href="https://github.com/beza-hash1" target="_blank">here</a></p>
->>>>>>> ba305e2 (Add basic flexbox)
+      <p>Made by Bezawit Abera - <a href="https://github.com/beza-hash1" target="_blank" rel="noopener noreferrer">here</a></p>
+
+      <!-- W3C Validation Badge -->
+      <a href="https://validator.w3.org/check?uri=referer">
+        <img src="https://www.w3.org/Icons/valid-html5-blue" alt="Valid HTML5" />
+      </a>
     </footer>
   </body>
 </html>
